名前の改善、Java 21活用　coreパッケージで